force-app/main/default/objects/At_Risk_KPI__c/At_Risk_KPI__c.object-meta.xml
<CustomObject>
    <description>These records are being loaded with At-Risk Data that relates to a Customer Account. The information is provided at a summary level as well as by product line. The fields on this page are not editable.</description>
    <label>At Risk KPI</label>
    <nameField>
        <displayFormat>At Risk-{0000000}</displayFormat>
        <label>At Risk KPI Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>At Risk KPIs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>