force-app/main/default/objects/At_Risk_KPI__c/fields/At_Risk_Assessor__c.field-meta.xml
<CustomField>
    <fullName>At_Risk_Assessor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Owner To Be Deleted</label>
    <referenceTo>User</referenceTo>
    <relationshipName>At_Risk_KPI</relationshipName>
    <type>Lookup</type>
</CustomField>