force-app/main/default/objects/At_Risk_KPI__c/fields/At_Risk_KPI_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>At_Risk_KPI_Created_Date__c</fullName>
    <inlineHelpText>This field will display the date the record was created. It is created upon monthly data upload.</inlineHelpText>
    <label>At Risk KPI Created Date To Be Deleted</label>
    <type>Date</type>
</CustomField>