force-app/main/default/objects/At_Risk_KPI__c/fields/Avg_Incoming_Requests_Last_6_mos__c.field-meta.xml
<CustomField>
    <fullName>Avg_Incoming_Requests_Last_6_mos__c</fullName>
    <inlineHelpText>Data may not be available.</inlineHelpText>
    <label>Avg Incoming Requests - Last 6 mos - Del</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>