force-app/main/default/objects/At_Risk_KPI__c/fields/Avg_Monthly_Incoming_Requests_6_Mos__c.field-meta.xml
<CustomField>
    <fullName>Avg_Monthly_Incoming_Requests_6_Mos__c</fullName>
    <description>One of eight Key Performance Indicators.</description>
    <inlineHelpText>Monthly average number of Customer Care requests logged in AWS for customer.</inlineHelpText>
    <label>Avg Monthly Incoming Requests-6 Mos -Del</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>