force-app/main/default/objects/At_Risk_KPI__c/fields/Avg_Monthly_Meeting_Activities_6_Mos__c.field-meta.xml
<CustomField>
    <fullName>Avg_Monthly_Meeting_Activities_6_Mos__c</fullName>
    <label>Avg Monthly Meeting Activities-6 Mos-Del</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>