force-app/main/default/objects/At_Risk_KPI__c/fields/AWS_Data__c.field-meta.xml
<CustomField>
    <fullName>AWS_Data__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AWS Data To Be Deleted</label>
    <referenceTo>Customer_Care_Data__c</referenceTo>
    <relationshipLabel>At Risk KPIs</relationshipLabel>
    <relationshipName>At_Risk_Assessments_del_KPI</relationshipName>
    <type>Lookup</type>
</CustomField>