force-app/main/default/objects/At_Risk_KPI__c/fields/Business_Function__c.field-meta.xml
<CustomField>
    <fullName>Business_Function__c</fullName>
    <formula>/*if( isblank(Flow_State__c),&apos;N/A&apos;,Flow_State__r.Business_Function__c )*/null</formula>
    <label>Business Function To Be Deleted</label>
    <type>Text</type>
</CustomField>