force-app/main/default/objects/At_Risk_KPI__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <label>Comments To Be Deleted</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>