force-app/main/default/objects/At_Risk_KPI__c/fields/Complete_Assessment__c.field-meta.xml
<CustomField>
    <fullName>Complete_Assessment__c</fullName>
    <formula>/*IF( 
NOT(ISPICKVAL( At_Risk_Status__c , &quot;Complete&quot;)), 

IF( $User.Id = At_Risk_Assessor__r.Id , 

HYPERLINK( 
&quot;apex/RiskAssessmentNewKPI?id=&quot; &amp; Id, 
IMAGE( 
&quot;/resource/1384782479000/Update_Button&quot;, 
&quot;Complete&quot; 
), &quot;_self&quot; 
) 
,&quot;You are not the At Risk Assessor&quot; 
), 

HYPERLINK( 
&quot;apex/RiskAssessmentNewKPI?id=&quot; &amp; Id, 
IMAGE( 
&quot;/resource/1384782479000/Update_Button&quot;, 
&quot;Complete&quot; 
), &quot;_self&quot; 
) 
)*/
null</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Complete Assessment To Be Deleted</label>
    <type>Text</type>
</CustomField>