force-app/main/default/objects/At_Risk_KPI__c/fields/Customer_Account__c.field-meta.xml
<CustomField>
    <fullName>Customer_Account__c</fullName>
    <label>Customer Account To Be Deleted</label>
    <referenceTo>IM_Customer_Account__c</referenceTo>
    <relationshipLabel>At Risk KPIs</relationshipLabel>
    <relationshipName>At_Risk_KPIs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>