force-app/main/default/objects/At_Risk_KPI__c/fields/Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Name__c</fullName>
    <formula>/*Customer_Account__r.IM_Customer_Account_Name__c*/
null</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Name To Be Deleted</label>
    <type>Text</type>
</CustomField>