force-app/main/default/objects/At_Risk_KPI__c/fields/DBR_At_Risk_Category__c.field-meta.xml
<CustomField>
    <fullName>DBR_At_Risk_Category__c</fullName>
    <formula>/*IF( DBR_At_Risk_Score__c &gt;= 10, &quot;High Risk&quot;, 
IF( DBR_At_Risk_Score__c &gt;= 7, &quot;Medium Risk&quot;, &quot;Low Risk&quot;))*/
null</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DBR At Risk Category To Be Deleted</label>
    <type>Text</type>
</CustomField>