force-app/main/default/objects/At_Risk_KPI__c/fields/DBR_At_Risk_Flag__c.field-meta.xml
<CustomField>
    <fullName>DBR_At_Risk_Flag__c</fullName>
    <formula>/*IMAGE( 
CASE( 

DBR_At_Risk_Category__c ,
 
&quot;High Risk&quot;, &quot;/img/msg_icons/error16.png&quot;, 
&quot;Medium Risk&quot;, &quot;/img/msg_icons/warning16.png&quot;, 
&quot;Low Risk&quot;, &quot;/img/msg_icons/confirm16.png&quot;,

&quot;/s.gif&quot;), 
&quot;NULL&quot;)*/
null</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DM At Risk Flag - To Be Deleted</label>
    <type>Text</type>
</CustomField>