force-app/main/default/objects/At_Risk_KPI__c/fields/DBR_Monthly_Value__c.field-meta.xml
<CustomField>
    <fullName>DBR_Monthly_Value__c</fullName>
    <inlineHelpText>Current monthly revenue from billings for the Data Backup and Recovery business line.</inlineHelpText>
    <label>DM Monthly Value To Be Deleted</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>