force-app/main/default/objects/At_Risk_KPI__c/fields/DBR_Price__c.field-meta.xml
<CustomField>
    <fullName>DBR_Price__c</fullName>
    <inlineHelpText>The percentage of risk attributed for this particular category code.</inlineHelpText>
    <label>DM Price To Be Deleted</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>