force-app/main/default/objects/At_Risk_KPI__c/fields/DBR_Reason_Code_2__c.field-meta.xml
<CustomField>
    <fullName>DBR_Reason_Code_2__c</fullName>
    <description>#2 reason attributed to why account is at risk, ranked in order of importance.</description>
    <inlineHelpText>#2 reason attributed to why account is at risk, ranked in order of importance.</inlineHelpText>
    <label>DM Reason Code 2 To Be Deleted</label>
    <length>255</length>
    <type>Text</type>
</CustomField>