force-app/main/default/objects/At_Risk_KPI__c/fields/DBR_Reason_Value_3__c.field-meta.xml
<CustomField>
    <fullName>DBR_Reason_Value_3__c</fullName>
    <inlineHelpText>The corresponding percentage score against the reason code</inlineHelpText>
    <label>DBR Reason Value 3 To Be Deleted</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>