force-app/main/default/objects/At_Risk_KPI__c/fields/Flow_State__c.field-meta.xml
<CustomField>
    <fullName>Flow_State__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Flow State To Be Deleted</label>
    <referenceTo>Flow_State__c</referenceTo>
    <relationshipLabel>At Risk KPIs</relationshipLabel>
    <relationshipName>At_Risk_KPIs</relationshipName>
    <type>Lookup</type>
</CustomField>