force-app/main/default/objects/At_Risk_KPI__c/fields/Incoming_Service_Request_Last_6_Mos__c.field-meta.xml
<CustomField>
    <fullName>Incoming_Service_Request_Last_6_Mos__c</fullName>
    <description>One of eight Key Performance Indicators.</description>
    <inlineHelpText>Total number of Customer Care request logged in AWS for customer. Data may not be available.</inlineHelpText>
    <label>Incoming Service Request-Last 6 Mos-Del</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>