force-app/main/default/objects/At_Risk_KPI__c/fields/Overall_At_Risk_Score__c.field-meta.xml
<CustomField>
    <fullName>Overall_At_Risk_Score__c</fullName>
    <description>This is the overall at-risk score across all three product lines.</description>
    <inlineHelpText>This is the overall at-risk score across all three product lines on a scale of 1-10.</inlineHelpText>
    <label>At Risk Score To Be Deleted</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>