force-app/main/default/objects/At_Risk_KPI__c/fields/Overall_Price__c.field-meta.xml
<CustomField>
    <fullName>Overall_Price__c</fullName>
    <defaultValue>0.00</defaultValue>
    <inlineHelpText>The percentage of risk attributed for this particular category code.</inlineHelpText>
    <label>Overall Price To Be Deleted</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>