force-app/main/default/objects/At_Risk_KPI__c/fields/Product_Lines_At_Risk__c.field-meta.xml
<CustomField>
    <fullName>Product_Lines_At_Risk__c</fullName>
    <inlineHelpText>The Product Line value from the associated At Risk Assessment. Populated by workflow/ field update</inlineHelpText>
    <label>Product Lines At Risk To Be Deleted</label>
    <length>20</length>
    <type>Text</type>
</CustomField>