force-app/main/default/objects/At_Risk_KPI__c/fields/PY_Avg_Monthly_Rev_RM__c.field-meta.xml
<CustomField>
    <fullName>PY_Avg_Monthly_Rev_RM__c</fullName>
    <formula>/*Customer_Account__r.PY_Avg_Monthly_Rev_RM__c*/
null</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Average amount of revenue customer spent per month.</inlineHelpText>
    <label>PY Avg Monthly Rev - RM-To Be Deleted</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>