force-app/main/default/objects/At_Risk_KPI__c/fields/Risk_Level_Override__c.field-meta.xml
<CustomField>
    <fullName>Risk_Level_Override__c</fullName>
    <label>Risk Level Override To Be Deleted</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>