force-app/main/default/objects/At_Risk_KPI__c/fields/RM_At_RIsk_Category__c.field-meta.xml
<CustomField>
    <fullName>RM_At_RIsk_Category__c</fullName>
    <formula>/*IF( RM_At_Risk_Score__c &gt;= 10, &quot;High Risk&quot;, 
IF( RM_At_Risk_Score__c &gt;= 7, &quot;Medium Risk&quot;, &quot;Low Risk&quot;))*/
null</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RM At RIsk Category To Be Deleted</label>
    <type>Text</type>
</CustomField>