force-app/main/default/objects/At_Risk_KPI__c/fields/RM_At_Risk_Score__c.field-meta.xml
<CustomField>
    <fullName>RM_At_Risk_Score__c</fullName>
    <label>RM At Risk Score To Be Deleted</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>