force-app/main/default/objects/At_Risk_KPI__c/fields/RM_Price__c.field-meta.xml
<CustomField>
    <fullName>RM_Price__c</fullName>
    <inlineHelpText>The percentage of risk attributed for this particular category code.</inlineHelpText>
    <label>RM - Price To Be Deleted</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>