force-app/main/default/objects/At_Risk_KPI__c/fields/RM_Reason_Code_4__c.field-meta.xml
<CustomField>
    <fullName>RM_Reason_Code_4__c</fullName>
    <description>#4 reason attributed to why account is at risk, ranked in order of importance.</description>
    <inlineHelpText>#4 reason attributed to why account is at risk, ranked in order of importance.</inlineHelpText>
    <label>RM Reason Code 4 To Be Deleted</label>
    <length>255</length>
    <type>Text</type>
</CustomField>