force-app/main/default/objects/At_Risk_KPI__c/fields/RM_Reason_Value_2__c.field-meta.xml
<CustomField>
    <fullName>RM_Reason_Value_2__c</fullName>
    <inlineHelpText>The corresponding percentage score against the reason code</inlineHelpText>
    <label>RM Reason Value 2 To Be Deleted</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>