force-app/main/default/objects/At_Risk_KPI__c/fields/RM_Segment__c.field-meta.xml
<CustomField>
    <fullName>RM_Segment__c</fullName>
    <inlineHelpText>High, Medium, or Low Risk 
Priority 3, Priority 2, or Priority 1 Ranking 
The combination provides another level of detail into the risk severity.</inlineHelpText>
    <label>RM Segment To Be Deleted</label>
    <length>25</length>
    <type>Text</type>
</CustomField>