force-app/main/default/objects/At_Risk_KPI__c/fields/Shred_Monthly_Value__c.field-meta.xml
<CustomField>
    <fullName>Shred_Monthly_Value__c</fullName>
    <inlineHelpText>Current monthly revenue from billings for the Secure Shredding business line.</inlineHelpText>
    <label>Shred Monthly Value To Be Deleted</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>