force-app/main/default/objects/At_Risk_KPI__c/fields/Shred_Reason_Value_4__c.field-meta.xml
<CustomField>
    <fullName>Shred_Reason_Value_4__c</fullName>
    <label>Shred Reason Value 4 To Be Deleted</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>