force-app/main/default/objects/At_Risk_KPI__c/fields/Total_Distinct_Bill_Codes_in_year__c.field-meta.xml
<CustomField>
    <fullName>Total_Distinct_Bill_Codes_in_year__c</fullName>
    <inlineHelpText>Total number of bill codes used by customer.</inlineHelpText>
    <label>Total Distinct Bill Codes in year - Del</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>