force-app/main/default/objects/At_Risk_KPI__c/fields/Total_Incoming_Requests_last_6_mos__c.field-meta.xml
<CustomField>
    <fullName>Total_Incoming_Requests_last_6_mos__c</fullName>
    <inlineHelpText>Total number of Customer Care requests logged in AWS for customer. Data may not be available.</inlineHelpText>
    <label>Total Incoming Requests - last 6 mos-Del</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>