force-app/main/default/objects/At_Risk_KPI__c/fields/Total_Meeting_Activities_Last_6_Mos__c.field-meta.xml
<CustomField>
    <fullName>Total_Meeting_Activities_Last_6_Mos__c</fullName>
    <description>One of eight Key Performance Indicators.</description>
    <inlineHelpText>Total number of outbound touchpoints in the last 6 months, including email, phone calls, fax, etc.</inlineHelpText>
    <label>Total Meeting Activities -Last 6 Mos-Del</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>