force-app/main/default/objects/At_Risk_KPI__c/fields/Total_Monthly_Value__c.field-meta.xml
<CustomField>
    <fullName>Total_Monthly_Value__c</fullName>
    <formula>/*DBR_Monthly_Value__c + RM_Monthly_Value__c + Shred_Monthly_Value__c*/
null</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Current monthly revenue from billings for the 3 primary business lines. RM, DBR, &amp; Shred</inlineHelpText>
    <label>Total Monthly Value To Be Deleted</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>