force-app/main/default/objects/At_Risk_KPI__c/fields/Trigger__c.field-meta.xml
<CustomField>
    <fullName>Trigger__c</fullName>
    <formula>/*if( isblank(Flow_State__c),&apos;N/A&apos;, Flow_State__r.Trigger__c )*/
null</formula>
    <label>Trigger To Be Deleted</label>
    <type>Text</type>
</CustomField>