force-app/main/default/objects/At_Risk_KPI__c/recordTypes/BW_NA_Risk_Assessment.recordType-meta.xml
<RecordType>
    <fullName>BW_NA_Risk_Assessment</fullName>
    <active>true</active>
    <label>BW - NA Risk Assessment</label>
</RecordType>